--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "print-js": "^1.0.63",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
@@ -56,6 +57,7 @@
     "react-redux": "^7.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
+    "react-simplemde-editor": "^4.1.3",
     "redux": "^4.0.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
