--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-config": "^5.1.1",
