--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-simplemde-editor": "^4.1.3",
     "react-tagcloud": "^2.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
