调节样式，添加服务器异常的对应处理，添加首页列表的预览，修改首页列表长度

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "print-js": "^1.0.63",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-calendar-heatmap": "^1.8.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
